# .agent

./: .gitattributes  .gitignore  README.md  pyproject.toml
scripts/: agent-index.py  validate-skills.ps1  validate-skills.py
skills/agent-index-installer/: SKILL.md
skills/agent-index-installer/agents/: openai.yaml
skills/agent-index-installer/assets/common/: AGENTS.md.template  agent-index.gitignore.template  agent-index.yaml.template  config.toml.template  gitnexus-home.gitignore.template
skills/agent-index-installer/assets/providers/gitnexus/templates/: group.yaml.template
skills/agent-index-installer/assets/router/skills/agent-index-router/: SKILL.md
skills/agent-index-installer/assets/workspace/skills/agent-index-lifecycle/: SKILL.md
skills/agent-index-installer/assets/workspace/skills/agent-index-workspace/: SKILL.md
skills/agent-index-installer/scripts/: install-project-index.ps1  upgrade-project-index.ps1
skills/gerrit-mot-cache/: SKILL.md
skills/gerrit-mot-cache/agents/: openai.yaml
skills/gerrit-mot-cache/references/: policy.md
skills/gerrit-mot-cache/scripts/: gerrit-cache.ps1  gerrit-cache.sh  gerrit_cache.py
skills/python-project-uv/: SKILL.md
skills/python-project-uv/agents/: openai.yaml
skills/python-project-uv/scripts/: ensure-python-uv.ps1  ensure_python_uv.py
tools/agent_index/: __init__.py  clean.py  cli.py  errors.py  installer.py  lifecycle.py  manifest.py  paths.py  process.py  templates.py  validation.py  workspace.py
tools/agent_index/providers/: __init__.py  codegraph.py  common.py  gitnexus.py
(+29 files in other folders)
