[project]
name = "agent-index"
version = "0.1.0"
description = "Cross-platform project index workspace manager for Codex skills."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "psutil>=5.9",
]

[tool.setuptools]
package-dir = {"" = "tools"}

[tool.setuptools.packages.find]
where = ["tools"]
